--- a/src/security-server/edc/extensions/xroad-payload-signer/build.gradle
+++ b/src/security-server/edc/extensions/xroad-payload-signer/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation project(':signer-protocol')
     implementation project(':common:common-core')
     implementation project(':common:common-keyconf')
+    implementation project(':security-server:edc:spi:xroad-core-spi')
     implementation project(':security-server:edc:spi:xroad-messagelog-spi')
     implementation project(':common:common-messagelog')
     implementation project(':security-server:edc:xroad-edc-security')
