--- a/src/security-server/edc/extensions/xroad-payload-signer/build.gradle
+++ b/src/security-server/edc/extensions/xroad-payload-signer/build.gradle
@@ -2,9 +2,12 @@ plugins {
     id 'java-library'
 }
 
+
 dependencies {
     implementation project(":serverconf")
-    implementation project(":proxy:application")
+    implementation(project(":proxy:application")) {
+        exclude module: "edc-client"
+    }
     implementation project(':signer-protocol')
     implementation project(':common:common-core')
     implementation project(':common:common-keyconf')
@@ -13,23 +16,20 @@ dependencies {
     implementation project(':common:common-messagelog')
     implementation project(':security-server:edc:xroad-edc-security')
 
-    implementation libs.edc.core.spi
-    implementation libs.edc.connector.core
+    implementation libs.edc.spi.core
+    implementation libs.edc.core.connector
 
-    implementation libs.edc.jwt.spi
-    implementation libs.edc.token.spi
-    implementation libs.edc.crypto.common.lib
-    implementation libs.edc.http.lib
+    implementation libs.edc.spi.transfer
+    implementation libs.edc.spi.jwt
+    implementation libs.edc.lib.crypto
     implementation libs.nimbus.jose.jwt
 
-    implementation(libs.edc.transfer.spi)
+    implementation libs.edc.dataplane.core
+    implementation libs.edc.dataplane.http
+    implementation libs.edc.dataplane.util
 
-    implementation libs.edc.data.plane.core
-    implementation libs.edc.data.plane.http
-    implementation libs.edc.data.plane.util
-
-    implementation libs.edc.jsonLd
-    implementation libs.edc.jws2020.lib
+    implementation libs.edc.ext.jsonld
+    implementation libs.edc.lib.jws2020
 
     testImplementation libs.edc.junit
     testImplementation libs.assertj.core
